--- a/OpenRiaServices.DomainServices.Tools/Framework/OpenRiaServices.DomainServices.Tools.csproj
+++ b/OpenRiaServices.DomainServices.Tools/Framework/OpenRiaServices.DomainServices.Tools.csproj
@@ -53,6 +53,9 @@
     <DefineConstants>$(DefineConstants);NET40;NET45;DBCONTEXT</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Managed.Reflection">
+      <HintPath>lib\Managed.Reflection.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Build" />
     <Reference Include="Microsoft.Build.Engine" />
     <Reference Include="Microsoft.Build.Framework" />
@@ -125,6 +128,7 @@
     <Compile Include="Pdb\PdbSourceFileProviderFactory.cs" />
     <Compile Include="SharedCodeServiceParameters.cs" />
     <Compile Include="SharedTypes\FilenameMap.cs" />
+    <Compile Include="SharedTypes\ISharedAssemblies.cs" />
     <Compile Include="SharedTypes\ISourceFileProvider.cs" />
     <Compile Include="SharedTypes\ISourceFileProviderFactory.cs" />
     <Compile Include="Pdb\SymStore\HResults.cs" />
@@ -178,6 +182,7 @@
     <Compile Include="ProjectSourceFileCache.cs" />
     <Compile Include="RiaClientFilesTask.cs" />
     <Compile Include="SharedTypes\CodeMemberKey.cs" />
+    <Compile Include="SharedTypes\SharedAssembliesManaged.cs" />
     <Compile Include="SharedTypes\SharedCodeService.cs" />
     <Compile Include="SharedTypes\SourceFileLocationService.cs" />
     <Compile Include="SharedTypes\ISourceFileLocationService.cs" />
