--- a/OpenRiaServices.DomainServices.Tools/Test/OpenRiaServices.DomainServices.Tools.Test.csproj
+++ b/OpenRiaServices.DomainServices.Tools/Test/OpenRiaServices.DomainServices.Tools.Test.csproj
@@ -111,7 +111,7 @@
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Data.Linq"/>
+    <Reference Include="System.Data.Linq" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml" />
@@ -128,6 +128,7 @@
     <Compile Include="FilenameMapTests.cs" />
     <Compile Include="MockCodeGenerationHost.cs" />
     <Compile Include="RiaClientFilesTaskTests.cs" />
+    <Compile Include="SharedAssembliesManagedTests.cs" />
     <Compile Include="SourceFileLocationServiceTests.cs" />
     <Compile Include="AssemblyGenerator.cs" />
     <Compile Include="CleanRiaClientFilesTaskTests.cs" />
